@@ -1,3 +1,6 @@
+Jul. 9 2011
+Collision detection.
+
 Jul. 6 2011
 Named frame.
 
